--- a/arch/x86/configs/archlinux_defconfig
+++ b/arch/x86/configs/archlinux_defconfig
@@ -1,3 +1,5 @@
+CONFIG_LOCALVERSION="-IllusionX"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_ZSTD=y
 CONFIG_DEFAULT_HOSTNAME="archlinux"
 CONFIG_SYSVIPC=y
