--- a/arch/x86/configs/archlinux_defconfig
+++ b/arch/x86/configs/archlinux_defconfig
@@ -32,20 +32,21 @@ CONFIG_X86_X2APIC=y
 CONFIG_X86_CPU_RESCTRL=y
 # CONFIG_X86_EXTENDED_PLATFORM is not set
 CONFIG_X86_INTEL_LPSS=y
-CONFIG_PROCESSOR_SELECT=y
-# CONFIG_CPU_SUP_AMD is not set
-# CONFIG_CPU_SUP_HYGON is not set
-# CONFIG_CPU_SUP_CENTAUR is not set
-# CONFIG_CPU_SUP_ZHAOXIN is not set
+CONFIG_X86_AMD_PLATFORM_DEVICE=y
 CONFIG_NR_CPUS=20
 CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS=y
 # CONFIG_X86_MCE is not set
 CONFIG_PERF_EVENTS_INTEL_UNCORE=m
 CONFIG_PERF_EVENTS_INTEL_RAPL=m
 CONFIG_PERF_EVENTS_INTEL_CSTATE=m
+CONFIG_PERF_EVENTS_AMD_POWER=m
+CONFIG_PERF_EVENTS_AMD_UNCORE=m
+CONFIG_PERF_EVENTS_AMD_BRS=y
+CONFIG_MICROCODE_AMD=y
 CONFIG_X86_MSR=y
 CONFIG_X86_CPUID=y
 # CONFIG_X86_5LEVEL is not set
+CONFIG_AMD_MEM_ENCRYPT=y
 CONFIG_X86_PMEM_LEGACY=m
 CONFIG_MTRR_SANITIZER_ENABLE_DEFAULT=1
 CONFIG_MTRR_SANITIZER_SPARE_REG_NR_DEFAULT=0
@@ -98,8 +99,11 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_X86_PCC_CPUFREQ=m
+CONFIG_X86_AMD_PSTATE=y
+CONFIG_X86_AMD_PSTATE_UT=m
 CONFIG_X86_ACPI_CPUFREQ=m
 CONFIG_X86_POWERNOW_K8=m
+CONFIG_X86_AMD_FREQ_SENSITIVITY=m
 CONFIG_X86_P4_CLOCKMOD=m
 CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_INTEL_IDLE=y
@@ -3151,6 +3155,7 @@ CONFIG_VIDEO_LM3646=m
 CONFIG_VIDEO_GS1662=m
 CONFIG_DVB_DUMMY_FE=m
 CONFIG_AGP=y
+CONFIG_AGP_AMD64=m
 CONFIG_AGP_INTEL=m
 CONFIG_AGP_SIS=m
 CONFIG_AGP_VIA=m
@@ -4428,6 +4433,9 @@ CONFIG_YOGABOOK_WMI=m
 CONFIG_ACERHDF=m
 CONFIG_ACER_WIRELESS=m
 CONFIG_ACER_WMI=m
+CONFIG_AMD_PMF=m
+CONFIG_AMD_PMC=m
+CONFIG_AMD_HSMP=m
 CONFIG_ADV_SWBUTTON=m
 CONFIG_APPLE_GMUX=m
 CONFIG_ASUS_LAPTOP=m
